# longisland

./: .gitignore  CMakeLists.txt  Long-Island.code-workspace
LIClient/: CMakeLists.txt  vcpkg.json
LIClient/3dparty/rlimgui/: rlImGui.cpp
LIClient/source/: GameConfig.cpp  GameConfig.h  IBaseGameObject.h  LIClient.cpp  Precompiled.h  TestCompileSpeed.cpp
LIClient/source/helpers/: WorldPositionHelper.cpp  WorldPositionHelper.h
LIClient/source/scene/: Actor.cpp  Actor.h  Building.cpp  Building.h  Camera.cpp  Camera.h  ISceneComponent.h  QuantumParams.cpp  QuantumParams.h  Scene.cpp  Scene.h
LIClient/source/scene/scene_components/: SceneComponentDebugGrid.cpp  SceneComponentDebugGrid.h  SceneComponentLocalHero.cpp  SceneComponentLocalHero.h
LIClient/source/scene/scene_components/town/: SceneComponentTownManager.cpp  SceneComponentTownManager.h  Town.cpp  Town.h
LIClient/source/scene/scene_components/world_map/: SceneComponentWorldMap.cpp  SceneComponentWorldMap.h
LIClient/source/ui/: IUiComponent.h  Ui.cpp  Ui.h  UiBox.cpp  UiBox.h  UiBoxConfig.h
LIClient/source/ui/footer/: Footer.cpp  Footer.h  FooterTabCamera.cpp  FooterTabCamera.h  FooterTabWorld.cpp  FooterTabWorld.h  IFooterTab.h
LIClient/source/ui/status/: Status.cpp  Status.h  StatusTabCamera.cpp  StatusTabCamera.h  StatusTabLogger.cpp  StatusTabLogger.h  StatusTabMouse.cpp  StatusTabMouse.h
LIClient/source/utils/: FastComponentAccess.h  IComponentOwner.h  LiNonCopyable.h  RayLibEx.cpp  RaylibEx.h  StorageByTypeInternal.h
LIClient/source/utils/stl/: stl_container_helper.cpp  stl_container_helper.h
LILibCommon/: CMakeLists.txt
LILibCommon/source/algorithm/: algorithm_position.cpp  algorithm_position.h
LILibCommon/source/msgpack/: msgpack.hpp
LILibCommon/source/navmesh/: navmesh_type_converter.cpp  navmesh_type_converter.h  path_finder.cpp  path_finder.h
LILibCommon/source/types/: actor_id.h  position.cpp  position.h
LIServer/: vcpkg.json
